--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.13",
+    "passport": "^0.5.0",
+    "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
     "seq": "^0.3.5",
