--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
     "pg": "^8.7.1",
+    "pipe": "^1.1.0",
     "redis": "^3.1.2",
     "seq": "^0.3.5",
     "sequelize": "^6.6.5"
