--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pipe": "^1.1.0",
     "redis": "^3.1.2",
     "seq": "^0.3.5",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "stripe": "^8.178.0"
   }
 }
